# sv_test1

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.serena/: project.yml
.serena/memories/: DPI-C_exploration_findings.md
dpi/: README.md  README_ja.md  batch_implementation_notes.md  dpi_flicker_noise.c  dpi_flicker_noise_batch.c  dpi_math.c
rtl/: counter.sv  demux_4bit.sv  ideal_amp_with_noise.sv  sine_wave_gen.sv
scripts/: TIMESCALE_HANDLING.md  flicker_noise_batch_reference.npy  flicker_noise_reference.npy  generate_custom_noise.py  generate_flicker_noise.py  generate_flicker_noise_batch.py  run_test.py  run_test_guide.md  shaped_noise_reference.npy  simulators.py  verify_noise_match.py  verify_noise_match_batch.py
spec/: ctle_specification.md  ctle_specification_ja.md  dfe_specification.md  dfe_specification_ja.md  ffe_specification.md  ffe_specification_ja.md  serdes_architecture.md  serdes_architecture_ja.md  test_strategy.md  test_strategy_ja.md
tb/: counter_tb.sv  demux_4bit_tb.sv  ideal_amp_with_noise_batch_tb.sv  ideal_amp_with_noise_tb.sv  sine_wave_gen_tb.sv  tb_wrapper.cpp
tests/: test_config.yaml
